# ARQ-RAG-turboquant

./: .env  .env.example  .gitignore  ARCHITECTURE.md  HUONG_DAN_TAO_DU_AN.md  LLM_EMBED_INVENTORY.md  PROJECT_OVERVIEW.md  README.md  REFACTOR_PROGRESS.md  RULE_FORAGENT.md  THESIS_DEFENSE_TECH_NOTES.md  baocaov2.md  benchmark_report_alt.md  codeturboquant_example.py  diagnose_retrieval.py  docker-compose.yml  extract_pdf.py  extracted_thesis.txt  implementation_plan.md  index.html  models_list.txt  package-lock.json  package.json  qaexample.md  quyuoc.md  requirements_benchmark.txt  test.py  tq_native_lib.pyd  work.md
.cloudflared/: config.yml  tunnel.json
Benchmark/: README.md
Benchmark/tq_native/: Cargo.toml
Benchmark/tq_native/src/: lib.rs  pq.rs  sq8.rs  turboquant.rs
TQ_engine_lib/: README.md  __init__.py  codebook.py  polar.py  quantizer.py  requirements.txt  rotation.py  score.py  store.py  tq_bridge.py  tq_config.json  tq_native.pyd  tq_simd.cpp
backend/: Dockerfile  LINUX_SETUP.md  benchmark.py  chat_service.py  crawl_paper.py  deep_diag.py  diagnose_retrieval.py  diagnose_retrieval_en.py  embed.py  export_excel.py  ingest.py  main.py  models_list.json  quantization.py  ragas_eval.py  requirements.txt  sequence.md  supabase_client.py  super_benchmark.py  vector_store.py
benchmark_result/: benchmark_results.json
crawl-paper/: crawl-paper.js
css/: style.css
eval_alt/: benchmark_recall.py  run_full_benchmarks.py  stress_5m.py
frontend/: .dockerignore  App.js  App.jsx  Dockerfile  index.html  next.config.ts  package-lock.json  package.json  (+1 more)
(+387 files in other folders)
